Create basic layout

--- a/index.html
+++ b/index.html
@@ -8,11 +8,36 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
         <script src="js/script.js" defer></script>
-        <title>TITLE</title>
+        <link rel="icon" href="images/icon.png">
+        <title>Dashboard</title>
     </head>
 
     <body>
-        
+            <div id="sidebar">
+                <a href="index.html"><img id="logo" src="images/logo.png" alt="logo"></a>
+                <nav>
+                    <ul>
+                        
+                    </ul>
+                    <ul>
+
+                    </ul>
+                </nav>
+            </div>
+            <main>
+                <div id="top-panel">
+                    <div id="upper">
+                        Search bar on left, notif/pic/profile on right
+                    </div>
+                    <div id="lower">
+                        Profile summary on left, new/upload/share on right
+                    </div>
+                </div>
+                <div id="tile-area">
+
+                </div>
+            </main>
+        </div>
     </body>
 
 </html>
