Add notification bell with hover dropdown

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
                             <button aria-label="Click to search"><img id="search-button" src="images/search-icon.png" alt="Search button"> </button>
                         </form>
                         <div class="right">
-                            <p>notif</p>
+                            <div class="dropdown">
+                                <img src="images/notification-bell.png" alt="notifications">
+                                <div class="dropdown-content">
+                                    <p>No new notifications</p>
+                                </div>
+                            </div>
                             <a href="#" aria-label="Click to go to profile"><img id="profile-link" src="images/profile.png" alt="Profile picture"></a>
                             <a href="#" aria-label="Click to go to profile">clickable_profile_name</a>
                         </div>
