--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
                 <a href="index.html"><img id="logo" src="images/logo.png" alt="logo"></a>
                 <nav>
                     <ul>
-                        
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Profile</a></li>
+                        <li><a href="#">Messages</a></li>
+                        <li><a href="#">History</a></li>
+                        <li><a href="#">Tasks</a></li>
+                        <li><a href="#">Community</a></li>
                     </ul>
                     <ul>
-
+                        <li><a href="#">Settings</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Privacy</a></li>
                     </ul>
                 </nav>
             </div>
