Complete top panel

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
                     </ul>
                 </nav>
             </div>
+
             <main>
+                
                 <div id="top-panel">
+
                     <div class="upper">
                         <form role="search">
                             <input id="search-bar" type="search" name="query" placeholder="Search..." aria-label="Search site contents">
@@ -49,13 +52,28 @@
                             <a href="#" aria-label="Click to go to profile">clickable_profile_name</a>
                         </div>
                     </div>
+
                     <div class="lower">
-                        Profile summary on left, new/upload/share on right
+                        <div class="left">
+                            <img id="profile-pic" src="images/profile.png" alt="Profile picture">
+                            <div>
+                                <h4>Hi there,</h4>
+                                <h2>Joe Bloggs (@joebloggs)</h2>
+                            </div>
+                        </div>
+                        <div id="upload-btns" class="right">
+                            <button>New</button>
+                            <button>Upload</button>
+                            <button>Share</button>
+                        </div>
                     </div>
+
                 </div>
+
                 <div id="tile-area">
 
                 </div>
+
             </main>
         </div>
     </body>
