Create main grid layout

--- a/index.html
+++ b/index.html
@@ -71,7 +71,116 @@
                 </div>
 
                 <div id="tile-area">
+                    <div id="your-projects">
+                        <h4>Your Projects</h4>
+                        <div class="tile">
+                            <div>
+                                <h5>Super Cool Project</h5>
+                                <p>Lorem ipsum...?</p>
+                            </div>
+                            <div class="tile-btns">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div>
+                                <h5>Less Cool Project</h5>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            </div>
+                            <div class="tile-btns">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div>
+                                <h5>Impossible App</h5>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            </div>
+                            <div class="tile-btns">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div>
+                                <h5>Easy Peasy App</h5>
+                                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            </div>
+                            <div class="tile-btns">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div>
+                                <h5>Ad Blocker</h5>
+                                <p>I hate Linux's double caps lock issue! I really should learn to shift-capitalise instead...</p>
+                            </div>
+                            <div class="tile-btns">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div>
+                                <h5>Money Maker</h5>
+                                <p>Sample text! Sample text! Sample text! Sample text! Sample text! Sample text! Sample text! Sample text! Sample text! Sample text! Sample text! Sample text! Sample text! Sample text!</p>
+                            </div>
+                            <div class="tile-btns">
+                                <button></button>
+                                <button></button>
+                                <button></button>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div id="announcements">
+                        <h4>Announcements</h4>
+                        <div class="vert-box">
+
+                        </div>
+                    </div>
+
+                    <div id="trending">
+                        <h4>Trending</h4>
+                        <div class="vert-box">
+                            <div class="trending-user">
+                                <img src="images/profile.png" alt="Trending user profile pic">
+                                <div>
+                                    <p class="trending-tag">@tegan</p>
+                                    <p class="trending-username">Tegan Tegan Tegan Really</p>
+                                </div>
+                            </div>
+                            <div class="trending-user">
+                                <img src="images/profile.png" alt="Trending user profile pic">
+                                <div>
+                                    <p class="trending-tag">@morgan</p>
+                                    <p class="trending-username">Not JP Morgan</p>
+                                </div>
+                            </div>  
+                            <div class="trending-user">
+                                <img src="images/profile.png" alt="Trending user profile pic">
+                                <div>
+                                    <p class="trending-tag">@kendall</p>
+                                    <p class="trending-username">Jenner Maybe</p>
+                                </div>
+                            </div>  
+                            <div class="trending-user">
+                                <img src="images/profile.png" alt="Trending user profile pic">
+                                <div>
+                                    <p class="trending-tag">@alex</p>
+                                    <p class="trending-username">Not An Alex UK</p>
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
                 </div>
 
             </main>
